updates for hashrouter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ingl3585.github.io/coffee-shop",
+  "homepage": "https://ingl3585.github.io/coffee-shop/#",
   "name": "coffee-shop",
   "version": "0.1.0",
   "private": true,
